--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+ul.nav.navbar-nav.navbar-right {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
 a.nav-link img {
     height: 35px;
+
 }
