--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+nav.navbar.navbar-expand-lg.navbar-light {
+    background-color: black;
+}
+
+
+ul.navbar-nav li.nav-item a.nav-link {
+    color: white;
+}
+
 ul.nav.navbar-nav.navbar-right {
     width: 100%;
     display: flex;
@@ -8,3 +17,4 @@ a.nav-link img {
     height: 35px;
 
 }
+
