--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
+/* body */
+body {
+    background-color: rgb(0, 0, 0);
+}
+
+/* profile-image */
+div.profile-image img {
+    text-align: center;
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    height: 400px;
+    width: 300px;
+}
+
+
+
+/* Navbar */
 nav.navbar.navbar-expand-lg.navbar-light {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .navbar-light .navbar-brand {
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 ul.navbar-nav li.nav-item a.nav-link {
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 ul.nav.navbar-nav.navbar-right {
@@ -27,7 +45,7 @@ a.nav-link img {
     width: 100%;
     position: fixed;
     bottom: 0;
-    color: white;
+    color: rgb(255, 255, 255);
     
 }
 
