--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ body {
 /* profile-image */
 div.profile-image img {
     text-align: center;
-    padding-bottom: 100px;
-    margin-bottom: 100px;
     margin-top: 100px;
-    height: 400px;
+    height: 300px;
     width: 300px;
+}
+
+div.profile-image p {
+    color: white;
+    font-size: 18px;
 }
 
 
