--- a/style.css
+++ b/style.css
@@ -71,7 +71,13 @@ a.nav-link img:hover {
     text-align: center;
     height: 100vh;
     width: 100%;
+    padding-bottom: 100px;
 }
+
+.hero-container {
+    margin-top: 60px;
+}
+
 .hero img {
     text-align: center;
     height: 300px;
