--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* body */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway&display=swap');
 body {
     background-color: rgb(0, 0, 0);
+    font-family: 'Raleway', sans-serif;
+
+
 }
 
 /* profile-image */
@@ -102,6 +106,11 @@ a.nav-link img:hover {
 }
 .projects h4, p{
     color: white;
+}
+
+.projects p.techstack {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 22px;
 }
 
 div.row.top-buffer { 
