add language image logos, create skeleton for skills div section

--- a/style.css
+++ b/style.css
@@ -94,6 +94,14 @@ a.nav-link img:hover {
     font-size: 18px;
 }
 
+/* Skills */
+.skills {
+    color: white;
+    display: block;
+    clear: both;
+}
+
+
 /* Projects */
 .projects {
     display: block;
