--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a.nav-link img:hover {
     text-align: center;
     min-height: 100vh;
     width: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 
 }
 
@@ -106,6 +106,18 @@ a.nav-link img:hover {
     width: 30px;
 }
 
+.skills p {
+    margin-top: 5px;
+}
+
+.skills-container h3 {
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+.skills h2 {
+    padding-bottom: 50px;
+}
 
 /* Projects */
 .projects {
@@ -153,4 +165,5 @@ hr.hr-divider {
     border-top: 1px solid rgb(255, 255, 255);
     width: 50%;
     clear: both;
+    margin-top: 8em;
 }
