--- a/style.css
+++ b/style.css
@@ -104,10 +104,11 @@ a.nav-link img:hover {
 .skills img {
     height: 30px;
     width: 30px;
+    margin-top: 10px;
 }
 
 .skills p {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .skills-container h3 {
@@ -119,7 +120,24 @@ a.nav-link img:hover {
     padding-bottom: 50px;
 }
 
+.skills-row.row {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+/* Skill Title */
 
+.skill-container.col-lg-6.col-sm-12.col-xs-12 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-container.col-lg-6.col-sm-12.col-xs-12 h3 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.
 
 /* Projects */
 .projects {
