--- a/style.css
+++ b/style.css
@@ -120,9 +120,11 @@ a.nav-link img:hover {
     padding-bottom: 50px;
 }
 
-.skills-row.row {
-    padding-top: 50px;
-    padding-bottom: 50px;
+.skill-row.row {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 10px;
+    border: 1px solid white;
 }
 /* Skill Title */
 
