--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 /* body */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway&display=swap");
 body {
