add hover color to nav drop down

--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ a#navbarDropdown.nav-link.dropdown-toggle {
   color: rgb(255, 255, 255);
 }
 
+a#navbarDropdown.nav-link.dropdown-toggle:hover {
+  color: rgb(255, 255, 255, 0.5);
+}
+
 a.dropdown-item {
   color: rgb(255, 255, 255);
 }
